css/main.css
/* ... */
.icon-container img {
    height: 80px;
    width: 80px;
}
.item img {
    width: 100%;
}

/* ================================================== */

/* ================================================== */

/* ================================================== */

/* ================================================== */

/* ================================================== */

/* ================================================== */
@media only screen and (min-width: 1600px) {
    .item img {
        transform: translateY(-20%);
    }
}
@media only screen and (min-width: 1200px) {
    .item img {
        transform: translateY(-15%);
    }
}
@media only screen and (max-width: 1040px) {
    .wordmark {
        width: 50%;
        top: 65px;
        margin-right: 10px;
    }
    
    #submit {
        margin-top: 2px;
    }
}
@media only screen and (max-width: 639px) {
    header {
        margin-top: 0;
        margin-bottom: 0;
        padding: 1em;
    }
    
    .wordmark {
        margin: 0;
        width: 100%;
        height: auto;
        top: 0;
    }
    
    #mainHeader {
        font-size: 36px;
    }
    
    .jumbotron-paragraph,
    #evolving_text p {
        font-size: 14px!important;
    }
}
@media only screen and (max-width: 990px) {
    #evolving_pic {
        height: 150px;
    }
    
    #evolving_text h2 {
        padding-top: 0;
    }
    
    #actionsRow2 {
        margin-top: -15px;
    }
}
@media only screen and (max-width: 990px) and (min-width: 768px) {
    img.toro {
        -webkit-transform: translateX(-120px);
        -moz-transform: translateX(-120px);
        transform: translateX(-120px);
    }
    
    .item img {
        -webkit-transform: translateX(-10%);
        -moz-transform: translateX(-10%);
        transform: translateX(-10%);
        width: 120%;
    }
}
@media only screen and (min-width: 740px) {
    .navbar-right {
        margin-left: -200px;
    }
}
@media only screen and (max-width: 740px) {
    .dropdown-menu li {
        text-align: left;
    }
    
    .dropdown-menu>li>a:hover,
    .dropdown-menu>li>a:focus {
        background-color: #dde6ee!important;
        color: black!important;
        background-image: none!important;
        filter: none;
    }
    
    ul.social-icons {
        text-align: center;
    }
    
    .footer-item {
        text-align: center;
    }
}
@media only screen and (max-width: 768px) {
    #evolving_text {
        text-align: center;
    }
    
    .main-slider {
        padding-left: 0;
        padding-right: 0;
    }
    
    #masthead2 {
        padding-bottom: 24px!important;
    }
    
    .slick-list {
        height: 400px;
    }
    
    .item img {
        width: 160%;
        -webkit-transform: translateX(-30%) translateY(-10%);
        -moz-transform: translateX(-30%) translateY(-10%);
        transform: translateX(-30%) translateY(-10%);
    }
}
@media only screen and (max-width: 360px) {
    .hours-day {
        padding-right: 2em;
    }
}
@media only screen and (max-width: 510px) {
    .footer-text {
        /*width: 365px;*/
        margin: 0 auto;
    }
}
@media only screen and (max-width: 480px) {
    .slick-list {
        height: 350px;
    }
    
    .item img {
        width: 200%;
        -webkit-transform: translateX(-40%) translateY(-10%);
        -moz-transform: translateX(-40%) translateY(-10%);
        transform: translateX(-40%) translateY(-10%);
    }
    
    .icon-container img {
        width: 60px;
        height: 60px;
    }
    
    #footerPrivacyTerms {
        display: block;
        clear: both;
    }
    
    .icon-container-col-mobile {
        padding-left: 5px;
        padding-right: 5px;
    }
}

/* ================================================== */

/*               CUSTOM STYLES - EVENT CARDS
/* ================================================== */
#exhibit1_heading {
    margin-top: 125px;
    font-size: 2.2em;
    -webkit-text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
    -moz-text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
    color: #cbcdd4;
}
#exhibit1_subheading {
    color: #cbcdd4;
    font-size: 1em;
    -webkit-text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
    -moz-text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
}
#exhibit2_heading {
    margin-top: 60px;
    color: #333333;
    font-size: 2.1em;
    -webkit-text-shadow: 2px 2px 2px rgba(198, 188, 172, 1);
    -moz-text-shadow: 2px 2px 2px rgba(198, 188, 172, 1);
    text-shadow: 2px 2px 2px rgba(198, 188, 172, 1);
}
#exhibit2_subheading {
    color: #333333;
    font-size: 1em;
    -webkit-text-shadow: 2px 2px 2px rgba(198, 188, 172, 1);
    -moz-text-shadow: 2px 2px 2px rgba(198, 188, 172, 1);
    text-shadow: 2px 2px 2px rgba(198, 188, 172, 1);
}

/* ================================================== */

/*               MEDIA QUERIES - EVENT CARDS
/* ================================================== */

}
@media only screen and (max-width: 1199px) {}
@media only screen and (max-width: 990px) {}
@media only screen and (max-width: 768px) {}
@media only screen and (max-width: 500px) {
    #exhibit1_heading {
        font-size: 1.8em;
    }
    #exhibit2_heading {
        margin-top: 60px;
        font-size: 1.8em;
    }
    #exhibit2_subheading {
        font-size: 1em;
        margin-top: 50px;
    }
}
@media only screen and (max-width: 407px) {
    #exhibit1_heading {
        margin-top: 80px;
    }
}

/* ================================================== */

